--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "author": "BdeGr",
   "license": "MIT",
   "scripts": {
-    "dev": "keystone-next dev",
-    "deploy": "keystone-next build",
-    "seed-data": "keystone-next --seed-data",
-    "start": "keystone-next start"
+    "start": "keystone-next"
   },
   "eslintConfig": {
     "extends": "wesbos/typescript.js",
