--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "BdeGr",
   "license": "MIT",
   "scripts": {
-    "postinstall": "keystone-next build",
-    "start": "keystone-next start"
+    "start": "keystone-next"
   },
   "eslintConfig": {
     "extends": "wesbos/typescript.js",
