--- a/.ebextensions/01_add_cors.config
+++ b/.ebextensions/01_add_cors.config
@@ -1,5 +1,5 @@
-commands:
-  02_fix_static_cors:
+container_commands:
+  01_fix_static_cors:
     command: "/tmp/fix_static_cors.sh"
 files:
   "/tmp/fix_static_cors.sh":
