--- a/.ebextensions/01_add_cors.config
+++ b/.ebextensions/01_add_cors.config
@@ -1,5 +1,13 @@
+commands:
+  01setup_swap:
+      test: test ! -e /var/swapfile
+      command: |
+          /bin/dd if=/dev/zero of=/var/swapfile bs=1M count=2048
+          /bin/chmod 600 /var/swapfile
+          /sbin/mkswap /var/swapfile
+          /sbin/swapon /var/swapfile
 container_commands:
-  01_fix_static_cors:
+  02_fix_static_cors:
     command: "/tmp/fix_static_cors.sh"
 files:
   "/tmp/fix_static_cors.sh":
